--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -10,40 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "09b13e3b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (2.3.1)\n",
-      "Requirement already satisfied: seaborn in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (0.13.2)\n",
-      "Requirement already satisfied: pyarrow in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (21.0.0)\n",
-      "Requirement already satisfied: numpy>=1.22.4 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from pandas) (2.2.6)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from seaborn) (3.10.3)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.3.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.59.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.8)\n",
-      "Requirement already satisfied: packaging>=20.0 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (25.0)\n",
-      "Requirement already satisfied: pillow>=8 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (11.3.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.2.3)\n",
-      "Requirement already satisfied: six>=1.5 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install pandas seaborn pyarrow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "9719e222",
    "metadata": {},
    "outputs": [],
@@ -53,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "d727a3c3",
    "metadata": {},
    "outputs": [
@@ -81,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "bfb13231",
    "metadata": {},
    "outputs": [
@@ -109,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "68bf4ccb",
    "metadata": {},
    "outputs": [
@@ -192,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "65ab26c4",
    "metadata": {},
    "outputs": [
@@ -202,7 +169,7 @@
        "\"Column 'Age' has been filled with the mean value: 29.70. Column: 'Age_missing' has been created.\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "5a0a8d3f",
    "metadata": {},
    "outputs": [],
@@ -223,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "dd3bdffe",
    "metadata": {},
    "outputs": [],
@@ -249,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "2eafe2ca",
    "metadata": {},
    "outputs": [
@@ -293,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "fdaaaf1c",
    "metadata": {},
    "outputs": [
@@ -350,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "f5661b16",
    "metadata": {},
    "outputs": [],
@@ -370,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "366fcd87",
    "metadata": {},
    "outputs": [],
@@ -396,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "id": "b145acd6",
    "metadata": {},
    "outputs": [
@@ -784,14 +751,14 @@
     }
    ],
    "source": [
-    "desu.unique_count(df_train, \"Survived\")\n",
-    "desu.unique_count(df_train, \"Pclass\")\n",
-    "desu.unique_count(df_train, \"Sex\")\n",
-    "desu.unique_count(df_train, \"Age\")\n",
-    "desu.unique_count(df_train, \"SibSp\")\n",
-    "desu.unique_count(df_train, \"Parch\")\n",
-    "desu.unique_count(df_train, \"Fare\")\n",
-    "desu.unique_count(df_train, \"Embarked\")"
+    "desu.unique_count_single_column(df_train, \"Survived\")\n",
+    "desu.unique_count_single_column(df_train, \"Pclass\")\n",
+    "desu.unique_count_single_column(df_train, \"Sex\")\n",
+    "desu.unique_count_single_column(df_train, \"Age\")\n",
+    "desu.unique_count_single_column(df_train, \"SibSp\")\n",
+    "desu.unique_count_single_column(df_train, \"Parch\")\n",
+    "desu.unique_count_single_column(df_train, \"Fare\")\n",
+    "desu.unique_count_single_column(df_train, \"Embarked\")"
    ]
   },
   {
@@ -819,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "id": "5388a625",
    "metadata": {},
    "outputs": [
@@ -1171,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "id": "bc7465c7",
    "metadata": {},
    "outputs": [
@@ -1217,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "id": "85f47f65-1619-4e26-849b-5874ba841e4c",
    "metadata": {},
    "outputs": [],
