--- a/notebooks/02_EDA.ipynb
+++ b/notebooks/02_EDA.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import data_essentials_utils as desu"
+    "import desu"
    ]
   },
   {
@@ -23,8 +23,8 @@
    "outputs": [],
    "source": [
     "packages = [\"scikit-learn\"]\n",
-    "install_packages(packages)\n",
-    "import_packages(packages)"
+    "desu.install_packages(packages)\n",
+    "desu.import_packages(packages)"
    ]
   },
   {
@@ -243,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
